// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CampaignItemListFeature component should render 1`] = `
<View
  cardColor="#00676D"
  style={
    Object {
      "backgroundColor": "#00676D",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      overlayColor="#000000"
      overlayType="gradient-bottom"
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/800/1600/?random",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "bottom": 0,
          "paddingBottom": 32,
          "paddingHorizontal": 24,
          "paddingVertical": 16,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": null,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(244, 247, 248, 0.6)",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Boom
        </Text>
      </View>
      <Text
        numberOfLines={3}
        style={
          Object {
            "color": "#F4F7F8",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      >
        Are you telling me that you built a time machine out of a DeLorean?
      </Text>
      <View
        hasSummary={true}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingTop": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 16,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#F4F7F8",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The CampaignItemListFeature component should render 2`] = `
<View
  isLoading={true}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <Image
      fadeDuration={250}
      isLoading={true}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1.2,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": null,
            "flexDirection": "row",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={32}
          bbWidth={32}
          height={32}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              undefined,
              null,
              Object {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={32}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGCircle
              cx="12"
              cy="12"
              fill={
                Array [
                  0,
                  1294411566,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              r="12"
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 24,
            "marginVertical": 1.8000000000000007,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingTop": 8,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The CampaignItemListFeature component should render a Component prop 1`] = `
<View
  cardColor="#00676D"
  style={
    Object {
      "backgroundColor": "#00676D",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      overlayColor="#00676D"
      overlayType="featured"
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/800/1600/?random",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "width": "100%",
        }
      }
    >
      <Text
        numberOfLines={3}
        style={
          Object {
            "color": "#F4F7F8",
            "fontFamily": "InterUI-Black",
            "fontSize": 36,
            "lineHeight": 41.4,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#F4F7F8",
            }
          }
        >
          Are you telling me that you built a time machine out of a DeLorean?
        </Text>
      </Text>
      <Text
        bold={false}
        italic={false}
        numberOfLines={3}
        style={
          Object {
            "color": "#F4F7F8",
            "fontFamily": "InterUI-Regular",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(244, 247, 248, 0.6)",
            }
          }
        >
          The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
        </Text>
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingTop": 8,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The CampaignItemListFeature component should render a HighlightCard 1`] = `
<View
  cardColor="#00676D"
  style={
    Object {
      "backgroundColor": "#00676D",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      overlayColor="#000000"
      overlayType="gradient-bottom"
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/800/1600/?random",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "bottom": 0,
          "paddingBottom": 32,
          "paddingHorizontal": 24,
          "paddingVertical": 16,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": null,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(244, 247, 248, 0.6)",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Boom
        </Text>
      </View>
      <Text
        numberOfLines={3}
        style={
          Object {
            "color": "#F4F7F8",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      >
        Are you telling me that you built a time machine out of a DeLorean?
      </Text>
      <View
        hasSummary={true}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingTop": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 16,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#F4F7F8",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
